--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1><i class="fas fa-stream"></i> TaskFlow</h1>
+            <h1><i class="fas fa-stream"></i>UPPER2DFlow</h1>
             <p class="subtitle">체계적이고 효율적인 할일 관리 시스템</p>
         </header>
 
