--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <button class="filter-btn" data-filter="pending">진행중</button>
             <button class="filter-btn" data-filter="completed">완료</button>
             <button class="filter-btn" data-filter="overdue">지연</button>
+            <button class="filter-btn" data-filter="important">중요</button>
         </div>
 
         <div class="stats">
@@ -66,5 +67,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
